--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/a418f03537.js" crossorigin="anonymous"></script>
     <title>Organízate!</title>
   </head>
   <body>
